# harald

./: .rustfmt.toml  Cargo.toml  readme.md
docs/: spec.md
programs/: grön.hd  menu.hd  names.hd  starwars.hd
src/: ast.rs  eval.rs  lib.rs  main.rs  nom_unicode.rs  parser.rs  string_utils.rs
tests/: empty_table.hd  hello_pattern.hd  hello_world.hd  hello_world.rs  smoke_menu.rs  table.rs  table_dict_holes.hd  table_dicts.rs  table_holes.hd  table_trailing.hd  table_weight.hd
